# python-package-boilerplate

./: Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: tests-and-linters.yaml
sample_package/: __init__.py
tests/: __init__.py  test_hello_world.py
