[tool.poetry]
name = "sample-package"
version = "0.1.0"
description = ""
authors = ["John Doe <john.doe@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.1.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
